k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tmr-gateway-service
  name: tmr-gateway-service
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: tmr-gateway-service
  type: ClusterIP
status:
  loadBalancer: {}
